[package]
name = "genpdf-json-bin"
version = "0.1.1"
edition = "2024"
authors = [
    "Numael Garay <mantrixsoft@gmail.com>"
]
exclude = [".builds/*"]
keywords = ["json", "pdf", "text", "layout"]
homepage = "https://github.com/numaelis/genpdf-json-bin"
repository = "https://github.com/numaelis/genpdf-json-bin"
license = "GPL3"

[dependencies]
#genpdf-json = {path = "../"}
genpdf-json = {git = "https://github.com/numaelis/genpdf-json-rs.git"}
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
